--- a/src/shared/locales/zh-CN.json
+++ b/src/shared/locales/zh-CN.json
@@ -283,7 +283,9 @@
       "switchedToGlobalMode": "已切换至全局模式",
       "switchedToDirectMode": "已切换至直连模式",
       "trayIconFailed": "托盘图标创建失败",
-      "trayIconFailedDesc": "托盘图标无法正常显示。应用功能不受影响，但您可能需要重启应用来恢复托盘功能。"
+      "trayIconFailedDesc": "托盘图标无法正常显示。应用功能不受影响，但您可能需要重启应用来恢复托盘功能。",
+      "tunStartFailed": "TUN 启动失败",
+      "tunStartFailedDesc": "TUN 启动失败，已自动禁用。如需使用请授予内核权限。"
     },
     "menu": {
       "about": "关于",
