--- a/src/shared/locales/zh-TW.json
+++ b/src/shared/locales/zh-TW.json
@@ -285,7 +285,9 @@
       "trayIconFailed": "系統匣圖示建立失敗",
       "trayIconFailedDesc": "系統匣圖示無法正常顯示。應用程式功能不受影響，但您可能需要重新啟動應用程式來恢復系統匣功能。",
       "tunStartFailed": "TUN 啟動失敗",
-      "tunStartFailedDesc": "TUN 啟動失敗，已自動停用。如需使用請授予核心權限。"
+      "tunStartFailedDesc": "TUN 啟動失敗，已自動停用。如需使用請授予核心權限。",
+      "coreRestarting": "核心正在重啟中",
+      "coreRestartingDesc": "請稍候再試"
     },
     "menu": {
       "about": "關於",
