--- a/src/shared/locales/en-US.json
+++ b/src/shared/locales/en-US.json
@@ -285,7 +285,9 @@
       "trayIconFailed": "Tray Icon Creation Failed",
       "trayIconFailedDesc": "The tray icon cannot be displayed properly. Application functionality is not affected, but you may need to restart the application to restore tray functionality.",
       "tunStartFailed": "TUN Start Failed",
-      "tunStartFailedDesc": "TUN failed to start and has been automatically disabled. Please grant core permissions to use TUN mode."
+      "tunStartFailedDesc": "TUN failed to start and has been automatically disabled. Please grant core permissions to use TUN mode.",
+      "coreRestarting": "Core is Restarting",
+      "coreRestartingDesc": "Please try again later"
     },
     "menu": {
       "about": "About",
